--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- 
-    UpennLPS HW1 index page for recommended assignment
+    UpennLPS HW2 Bootstrap index page
     Author: Kevin Wang
-    Date due: 2019/01/26
+    Date due: 2019/02/02
 -->
 
 <!DOCTYPE html>
@@ -11,51 +11,90 @@
 <head>
     <meta charset="UTF-8">
     <title>Kevin Cheng Fang Wang's Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <header>
         <div class="topBar">
-            <div class="nameBox">
-                <h1>Kevin Cheng Fang Wang</h1>
-            </div>
-            <div class="tabs">
-                <table>
-                    <tr>
-                        <td class="leftCell"><a href="index.html" id="noUL">About Me</a> </td>
-                        <td class="centerCell"><a href="portfolio.html"id="noUL">Portfolio</a></td>
-                        <td class="rightCell"><a href="contact.html"id="noUL">Contact</a></td>
-                    </tr>
-                </table>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-5 col-lg-4 nameBox">
+                        <div class="d-flex justify-content-center">
+                            <nav class="navbar navbar-default">
+                                <a class="navbar-brand">Kevin Cheng Fang Wang</a>
+                            </nav>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12 col-md-7 col-lg-8">
+                        <div class=" d-flex justify-content-center justify-content-md-end">
+                            <nav class="navbar navbar-expand navbar-light">
+
+                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+
+                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                    <ul class="navbar-nav mr-auto">
+                                        <li class="nav-item active">
+                                            <a class="nav-link" href="index.html">About Me </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+                                        </li>
+
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="contact.html">Contact</a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                            </nav>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
+
     </header>
-    <div class="mainContentBox">
-        <section class="mainContent">
-            <h2 class="pageTitle">About Me</h2>
-            <hr>
-            <img id="indexPic" src="images/indexImg.JPG" alt="myImage">
-            <p> My name is Kevin Wang and I graduated Pennsylvania State University studying
-                Engineering Sciences, a multidisciplinary program in which student demonstrate their
-                knowledge in engineering through completing a capstone project. To which I am able to combine
-                my interest in multiple subjects, especially electrical engineering and biomedicine, in the
-                Magnetic Resonance Imaging (MRI) lab. My group, which includes students in mechanical and
-                biomedical engineering, uses MRI technology in study tissue stiffness, an indicator of cancer and
-                other diseases. At Penn State I recieved a cross disciplinary education that allows me to
-                enagage problem solving in a unique way.</p>
-            <p>Growing up I was immersed in multiple cultures. I was born in Taiwan but grew up in the
-                United States, China and Japan. In college I spent time studying abroad in Germany where I learned
-                the basics of production management and manufacturing, and experienced their culture. I have a diverse
-                cultural knowledge by living and studying in these different countries. </p>
-            <p>Currently I am studying some web development skills with UPenn's coding bootcamp. I am 
-                learning HTML and CSS, and plan on obtaining more skills in the future 6 months. I plan on entering the
-                programming industry and would like to incorporate my multidisciplinary and cross-cultural background
-                into my future work.</p>
-        </section>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-lg-8 mainContentBox">
+            <section class="mainContent">
+                <h2 class="pageTitle">About Me</h2>
+                <hr>
+                <img id="indexPic" src="images/indexImg.JPG" alt="myImage">
+                <p> My name is Kevin Wang and I graduated Pennsylvania State University studying
+                    Engineering Sciences, a multidisciplinary program in which student demonstrate their
+                    knowledge in engineering through completing a capstone project. To which I am able to combine
+                    my interest in multiple subjects, especially electrical engineering and biomedicine, in the
+                    Magnetic Resonance Imaging (MRI) lab. My group, which includes students in mechanical and
+                    biomedical engineering, uses MRI technology in study tissue stiffness, an indicator of cancer and
+                    other diseases. At Penn State I recieved a cross disciplinary education that allows me to
+                    enagage problem solving in a unique way.</p>
+                <p>Growing up I was immersed in multiple cultures. I was born in Taiwan but grew up in the
+                    United States, China and Japan. In college I spent time studying abroad in Germany where I learned
+                    the basics of production management and manufacturing, and experienced their culture. I have a
+                    diverse
+                    cultural knowledge by living and studying in these different countries. </p>
+                <p>Currently I am studying some web development skills with UPenn's coding bootcamp. I am
+                    learning HTML and CSS, and plan on obtaining more skills in the future 6 months. I plan on entering
+                    the
+                    programming industry and would like to incorporate my multidisciplinary and cross-cultural
+                    background
+                    into my future work.</p>
+            </section>
+            </div>
+        </div>
     </div>
     <div class="footer">
     </div>
+
 </body>
 
 
