--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     <div class="container">
         <section class="mainContent">
             <div class="row">
-                <div class="col-md-12 col-lg-8 mainContentBox">
+                <div class="col-md-12 col-lg-8 col-xl-12 mainContentBox">
                     <div class="row">
                         <div class=col-sm-12>
                             <h2 class="pageTitle">Contact</h2>
