--- a/index.html
+++ b/index.html
@@ -64,31 +64,52 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-lg-8 mainContentBox">
-            <section class="mainContent">
-                <h2 class="pageTitle">About Me</h2>
-                <hr>
-                <img id="indexPic" src="images/indexImg.JPG" alt="myImage">
-                <p> My name is Kevin Wang and I graduated Pennsylvania State University studying
-                    Engineering Sciences, a multidisciplinary program in which student demonstrate their
-                    knowledge in engineering through completing a capstone project. To which I am able to combine
-                    my interest in multiple subjects, especially electrical engineering and biomedicine, in the
-                    Magnetic Resonance Imaging (MRI) lab. My group, which includes students in mechanical and
-                    biomedical engineering, uses MRI technology in study tissue stiffness, an indicator of cancer and
-                    other diseases. At Penn State I recieved a cross disciplinary education that allows me to
-                    enagage problem solving in a unique way.</p>
-                <p>Growing up I was immersed in multiple cultures. I was born in Taiwan but grew up in the
-                    United States, China and Japan. In college I spent time studying abroad in Germany where I learned
-                    the basics of production management and manufacturing, and experienced their culture. I have a
-                    diverse
-                    cultural knowledge by living and studying in these different countries. </p>
-                <p>Currently I am studying some web development skills with UPenn's coding bootcamp. I am
-                    learning HTML and CSS, and plan on obtaining more skills in the future 6 months. I plan on entering
-                    the
-                    programming industry and would like to incorporate my multidisciplinary and cross-cultural
-                    background
-                    into my future work.</p>
-            </section>
+            <div class="col-md-12 col-lg-8 col-xl-12 mainContentBox">
+                <section class="mainContent">
+                    <div class="row">
+                        <div class = col-sm-12>
+                        <h2 class="pageTitle">About Me</h2>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class = "col-sm-12 col-md-3">
+                            <img id="indexPic" src="images/indexImg.JPG" alt="myImage">
+                        </div>
+                        <div class= col>
+                            <p> My name is Kevin Wang and I graduated Pennsylvania State University studying
+                                Engineering Sciences, a multidisciplinary program in which student demonstrate their
+                                knowledge in engineering through completing a capstone project. To which I am able to
+                                combine
+                                my interest in multiple subjects, especially electrical engineering and biomedicine, in
+                                the
+                                Magnetic Resonance Imaging (MRI) lab. My group, which includes students in mechanical
+                                and
+                                biomedical engineering, uses MRI technology in study tissue stiffness, an indicator of
+                                cancer and
+                                other diseases. At Penn State I recieved a cross disciplinary education that allows me
+                                to
+                                enagage problem solving in a unique way.</p>
+                            <p>Growing up I was immersed in multiple cultures. I was born in Taiwan but grew up in the
+                                United States, China and Japan. In college I spent time studying abroad in Germany
+                                where I
+                                learned
+                                the basics of production management and manufacturing, and experienced their culture. I
+                                have a
+                                diverse
+                                cultural knowledge by living and studying in these different countries. </p>
+                            <p>Currently I am studying some web development skills with UPenn's coding bootcamp. I am
+                                learning HTML and CSS, and plan on obtaining more skills in the future 6 months. I plan
+                                on
+                                entering
+                                the
+                                programming industry and would like to incorporate my multidisciplinary and
+                                cross-cultural
+                                background
+                                into my future work.</p>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </div>
