--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
     </header>
     <div class="container">
         <div class=row>
-            <div class="col-md-12 col-lg-8 mainContentBox">
+            <div class="col-md-12 col-lg-8 col-xl-12 mainContentBox">
                 <div class="row">
                     <div class=col-sm-12>
                         <h2 class="pageTitle">Portfolio</h2>
