--- a/portfolio.html
+++ b/portfolio.html
@@ -114,13 +114,16 @@
                 <div class="row">
 
                     <div class="col-md-6  img-fluid">
-                        <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic1">
-                        <h3 class="portfolioTitle">Portfolio 1</h3>
+                        <a href="https://kevinw831205.github.io/wordGuessGame/">
+                            <img src="images/wordGuessGame.png" class="portfolioImages" alt="wordGuessGame">
+                            <h3 class="portfolioTitle">Word Guess Game</h3>
+                        </a>
                     </div>
-                    <div class=></div>
                     <div class="col-md-6  img-fluid">
+                        <a href="https://kevinw831205.github.io/unit-4-game/">
                         <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic2">
                         <h3 class="portfolioTitle">Portfolio 2</h3>
+                        </a>
                     </div>
                 </div>
                 <div class="row">
