--- a/portfolio.html
+++ b/portfolio.html
@@ -121,8 +121,8 @@
                     </div>
                     <div class="col-md-6  img-fluid">
                         <a href="https://kevinw831205.github.io/unit-4-game/">
-                        <img src="images/placeHolderImage.JPG" class="portfolioImages" alt="portfolioPic2">
-                        <h3 class="portfolioTitle">Portfolio 2</h3>
+                        <img src="images/unit-4-game.png" class="portfolioImages" alt="portfolioPic2">
+                        <h3 class="portfolioTitle">Star Wars RPG</h3>
                         </a>
                     </div>
                 </div>
